# rs2c

./: CHANGELOG.md  Cargo.toml  README.md
src/: convert.rs  lib.rs  main.rs  opencl.rs
src/tests/: mod.rs
